# resource-monitor

./: Cargo.toml  Dockerfile  ISSUES.md  README.md  cargo-clippy-workspace.sh  index.html  styles.css
.github/workflows/: publish.yml
shared/: Cargo.toml
shared/src/: lib.rs
src/: app.rs  main.rs  plotly_bindings.rs  send_types.rs
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/src/: main.rs
