[package]
name = "resource-monitor"
version = "1.2.1"
description = "A GUI resource monitor"
authors = ["stlenyk"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
shared = { path = "../shared" }

tauri = { version = "1.6", features = ["shell-open", "system-tray"] }
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.30.7"
nvml-wrapper = "0.10.0"
raw-cpuid = "11.0.1"
clap = { version = "4.5.2", features = ["derive"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
