[package]
name = "resource-monitor"
version = "1.3.0"
description = "A GUI resource monitor"
authors = ["stlenyk"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
shared = { path = "../shared" }

tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-single-instance = { version = "2" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.37.0"
nvml-wrapper = "0.11.0"
raw-cpuid = "11.0.1"
clap = { version = "4.5.2", features = ["derive"] }
clap_complete = "4.5.2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
